fix spacing problem

--- a/src/components/ticketingDashboard/Statistics/Statistics.module.scss
+++ b/src/components/ticketingDashboard/Statistics/Statistics.module.scss
@@ -1,6 +1,6 @@
 @import "../../../variables.scss";
 
-body {
+.statisticsWrapper {
     background-color: #dddddd;
     background-image: url("../../../assets/intergr8-login-background.svg");
     background-size: cover;
@@ -8,31 +8,31 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
-}
-
-section {
-    min-width: 800px;
-    max-width: 900px;
-    padding: 20px;
-    margin: 10% auto;
-    width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.6);
-    box-shadow: 0 10px 20px $primary-black-transparent, 0 6px 6px $primary-black-transparent;
-    border-radius: 4px;
-    color: #141414;
-    
-    article {
-      height: 300px;
-      width: 33%;
+    padding-top: 200px;
+    section {
+      min-width: 800px;
+      max-width: 900px;
+      padding: 20px;
+      margin: 0 auto;
+      width: 80%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      h3 {
-        margin-bottom: 20px;
-      }
-    } 
+      justify-content: space-evenly;
+      align-items: flex-start;
+      background-color: rgba(255, 255, 255, 0.6);
+      box-shadow: 0 10px 20px $primary-black-transparent, 0 6px 6px $primary-black-transparent;
+      border-radius: 4px;
+      color: #141414;
+      
+      article {
+        height: 300px;
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        h3 {
+          margin-bottom: 20px;
+        }
+      } 
+}
 }
